singolo2.css
body {
  padding: 0;
  margin: 0;
  font-family: "Lato", sans-serif;
  background-color: #282828;
}

.container {
  width: 1020px;
  margin: 0 auto;
  box-sizing: border-box;
}

.portfolio {
  background-color: #2d303a;
  padding: 60px 40px;
  border-bottom: 9px solid #323746;
}

.portfolio__header {
  margin: 0 0;
  font-size: 30px;
  font-weight: 900;
  color: #666d89;
}

.portfolio__description {
  font-size: 18px;
  font-weight: 300;
  color: #767e9e;
  margin: 21px 0 0 0;
}

.portfolio__tags {
  list-style: none;
  margin: 0;
  margin-top: 16px;
  padding: 0;
  display: flex;
}

.portfolio__tags-item a {
  font-size: 12px;
  font-weight: 400;
  color: #767e9e;
  padding: 2px 6px;
  margin-right: 10px;
  border-radius: 5px;
  border: 1px solid #666d89;
  text-decoration: none;
}

.portfolio__tags-item a:hover {
  color: #a5d328;
}

.portfolio__tags-item_selected a {
  color: #ffffff;
  border-color: #ffffff;
}

.portfolio-galery {
  padding: 0;
  margin: 0;
  margin-top: 22px;
  list-style: none;
  display: flex;
  flex-wrap: wrap;
}

.portfolio-galery__item {
  margin: 0 20px 18px 0;
}

.portfolio-galery__item:nth-child(4n) {
  margin-right: 0;
}

.portfolio-galery__item:nth-child(n + 8) {
  margin-bottom: 0;
}

.portfolio-galery__item:nth-child(n + 13) {
  display: none;
}

.about-us {
  background-color: #f2f2f2;
  padding: 60px 40px;
  border-bottom: 6px solid #ffffff;
}

.about-us__header {
  margin: 0 0;
  font-size: 30px;
  font-weight: 900;
  color: #666d89;
}

.about-us__description {
  font-size: 18px;
  font-weight: 300;
  color: #767e9e;
  margin: 18px 0 0 0;
  line-height: 30px;
}

.about-us__personal {
  list-style: none;
  margin: 0;
  margin-top: 45px;
  padding: 0;
  display: flex;
}

.about-us__personal-item {
  display: flex;
  flex-direction: column;
  flex-basis: 302px;
  margin-right: 17px;
}

.about-us__personal-item:nth-child(3n) {
  margin-right: 0;
}

.about-us__personal-name {
  margin: 0;
  margin-top: 12px;
  font-size: 18px;
  color: #666d89;
  font-weight: 900;
  width: 302px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
}

.about-us__personal-description {
  margin: 0;
  margin-top: 8px;
  font-size: 12px;
  font-weight: 400;
  line-height: 22px;
  color: #767e9e;
}

.social-media {
  list-style: none;
  margin: 0;
  margin-top: 22px;
  padding: 0;
  display: flex;
}

.social-media__item {
  margin-right: 6px;
  border-radius: 50%;
}

.social-media__item a {
  display: block;
  width: 34px;
  height: 34px;
}

.social-media__item:hover {
  background-color: #a5d328;
}

